--- a/.gitignore
+++ b/.gitignore
@@ -84,6 +84,7 @@ ipython_config.py
 
 # Added .Rproj since I'm using RStudio as a git gui.
 *.Rproj
+.Rhistory
 
 # pyenv
 #   For a library or package, you might want to ignore these files since the code is
